Добавлены генераторы параметров

--- a/test.html
+++ b/test.html
@@ -8,6 +8,7 @@
 </body>
 
 <template name="hello">
+  <input type="text" id="artist_name" placeholder="your name">
   <button>Click Me</button>
   {{text}}
 </template>
