добавил картинки в базу

--- a/test.html
+++ b/test.html
@@ -13,6 +13,8 @@
   {{#each obj}}
   <p>
   	time: {{time}} result: {{text}}
+  	<img src="{{avatar.im}}"/>
+  	<img src="{{avatar.int}}"/>
   </p>
   {{/each}}
 </template>
