Добавлен генератор стран

--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
   	{{/if}}
   	{{#each obj}}
 	  	<p>
-	  		<img src="{{avatar.im}}"/>
+	  		<!-- <img src="{{avatar.im}}"/> -->
 	  		<img src="{{avatar.int}}"/>
 	  		time: {{time}} result: {{text}}
 	  	</p>
